--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   },
   "dependencies": {
     "axios": "^0.12.0",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.0",
     "classnames": "^2.2.5",
     "express": "^4.14.1",
     "lodash": "^4.17.4",
+    "mongoose": "^4.8.1",
     "morgan": "^1.8.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
