--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.16.0",
     "classnames": "^2.2.5",
     "express": "^4.14.1",
+    "jsonwebtoken": "^7.2.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.8.1",
     "morgan": "^1.8.0",
