--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.2.5",
     "express": "^4.14.1",
     "jsonwebtoken": "^7.2.1",
+    "jwt-decode": "^2.1.0",
     "lodash": "^4.17.4",
     "mongoose": "^4.8.1",
     "morgan": "^1.8.0",
