--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "validator": "^6.2.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start2": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
