--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.0",
     "classnames": "^2.2.5",
+    "cors": "^2.8.1",
     "express": "^4.14.1",
     "jsonwebtoken": "^7.2.1",
     "jwt-decode": "^2.1.0",
