--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
+    "reactcss": "^1.1.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "shortid": "^2.2.6",
