--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.2.5",
     "cors": "^2.8.1",
     "express": "^4.14.1",
+    "fusioncharts": "^3.11.3-sr.1",
     "jsonwebtoken": "^7.2.1",
     "jwt-decode": "^2.1.0",
     "lodash": "^4.17.4",
@@ -19,6 +20,7 @@
     "morgan": "^1.8.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-fusioncharts": "^1.0.4",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "reactcss": "^1.1.1",
