--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^4.8.1",
     "morgan": "^1.8.0",
     "react": "^15.4.2",
+    "react-cookie": "^1.0.4",
     "react-dom": "^15.4.2",
     "react-fusioncharts": "^1.0.4",
     "react-redux": "^5.0.2",
