added websockets so the polls update live

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "shortid": "^2.2.6",
+    "socket.io": "^1.7.3",
+    "socket.io-client": "^1.7.3",
     "validator": "^6.2.1"
   },
   "scripts": {
