--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "mongoose": "^4.8.1",
     "morgan": "^1.8.0",
     "react": "^15.4.2",
+    "react-bootstrap": "^0.30.7",
     "react-cookie": "^1.0.4",
     "react-dom": "^15.4.2",
     "react-fusioncharts": "^1.0.4",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
+    "react-router-bootstrap": "^0.23.1",
     "reactcss": "^1.1.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
